--- a/admin.html
+++ b/admin.html
@@ -695,7 +695,7 @@
               <input type="number" id="bossMaxHp">
             </div>
             <div class="form-group">
-              <label>P.Def (Защита)</label>
+              <label>Defense</label>
               <input type="number" id="bossDefense">
             </div>
             <div class="form-group">
@@ -1479,7 +1479,7 @@
                 HP: ${boss.currentHp.toLocaleString()} / ${boss.maxHp.toLocaleString()} (${hpPercent}%)
               </div>
               <div class="boss-stats">
-                Index: ${boss.bossIndex}/${boss.totalBosses} | P.Def: ${boss.defense} | Thorns: ${boss.thorns || 0}
+                Index: ${boss.bossIndex}/${boss.totalBosses} | Defense: ${boss.defense} | Thorns: ${boss.thorns || 0}
               </div>
             </div>
           </div>
